# outlook-custom-tasks

./: .gitignore  LICENSE  README.md  TODO.md  oct.settings.example.json  pyproject.toml  stories.md
.util-scripts/: configure_pipx_windows.ps1  get_python_script_path.py
outlookcustomtasks/: __main__.py  settings.py  utils.py
outlookcustomtasks/outlook/: __init__.py  conditions.py
