[tool.poetry]
name = "outlookcustomtasks"
version = "0.1.0"
description = ""
authors = ["dp-rp <155602873+dp-rp@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pywin32 = "^306"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
