[tool.poetry]
name = "outlookcustomtasks"
version = "0.2.0"
description = ""
authors = ["dp-rp <155602873+dp-rp@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pywin32 = "^306"
alive-progress = "^3.1.5"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
